✨ record model_id in ag_tenant_agent_t, support revise model display_name

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -928,5 +928,7 @@
   "agentCallRelationship.description": "This flowchart shows the call relationship of {{name}} and all its tools and collaborative agents",
   "agentCallRelationship.noData": "No call relationship data available",
   "businessLogic.config.error.loadModelsFailed": "Failed to load available models",
-  "businessLogic.config.error.noAvailableModels": "No available models"
+  "businessLogic.config.error.noAvailableModels": "No available models",
+  "businessLogic.config.error.modelUpdateFailed": "Failed to update agent model",
+  "businessLogic.config.error.maxStepsUpdateFailed": "Failed to update agent max steps"
 }
