✨ MCP Tool test run #541

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -360,11 +360,12 @@
   "toolConfig.input.array.placeholder": "Please enter JSON array",
   "toolConfig.input.object.placeholder": "Please enter JSON object",
   "toolConfig.toolTest.toolInfo": "Tool Information",
-  "toolConfig.toolTest.configParams": "Config Parameters",
-  "toolConfig.toolTest.inputParams": "Input Parameters",
+  "toolConfig.toolTest.configParams": "Parameter Configuration",
+  "toolConfig.toolTest.inputParams": "Parameter Input",
   "toolConfig.toolTest.executing": "Testing...",
   "toolConfig.toolTest.execute": "Execute Test",
   "toolConfig.toolTest.result": "Test Result",
+  "toolConfig.button.testTool": "Test Tool",
 
   "toolPool.title": "Select tools",
   "toolPool.loading": "Loading...",
@@ -397,6 +398,7 @@
   "common.button.close": "Close",
   "common.button.cancel": "Cancel",
   "common.button.save": "Save",
+  "common.button.saving": "Saveing",
   "common.button.editConfig": "Edit Configuration",
   "common.message.refreshSuccess": "Refresh successful",
   "common.message.refreshFailed": "Refresh failed",
