--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -366,6 +366,7 @@
   "toolConfig.toolTest.executing": "测试中...",
   "toolConfig.toolTest.execute": "执行测试",
   "toolConfig.toolTest.result": "测试结果",
+  "toolConfig.button.testTool": "工具测试",
 
   "toolPool.title": "选择 Agent 的工具",
   "toolPool.loading": "加载中...",
@@ -396,6 +397,7 @@
   "common.delete": "删除",
   "common.button.cancel": "取消",
   "common.button.save": "保存",
+  "common.button.saving": "保存中",
   "common.notice": "注意",
   "common.button.close": "关闭",
   "common.button.editConfig": "修改配置",
