✨ MCP Tool test run #541

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -398,7 +398,7 @@
   "common.button.close": "Close",
   "common.button.cancel": "Cancel",
   "common.button.save": "Save",
-  "common.button.saving": "Saveing",
+  "common.button.saving": "Saving",
   "common.button.editConfig": "Edit Configuration",
   "common.message.refreshSuccess": "Refresh successful",
   "common.message.refreshFailed": "Refresh failed",
