frontend: update api key description #1360
Signed-off-by: Zhi Wang <928570418@qq.com>

--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -530,13 +530,14 @@
   "model.dialog.placeholder.url": "请输入模型URL, 例如: https://api.openai.com/v1",
   "model.dialog.placeholder.url.embedding": "请输入模型URL, 例如: https://api.openai.com/v1/embeddings",
   "model.dialog.placeholder.apiKey": "请输入API Key（可选）",
+  "model.dialog.placeholder.apiKeyRequired": "请输入API Key",
   "model.dialog.placeholder.maxTokens": "请输入最大Token数",
   "model.dialog.settings.title": "模型设置",
   "model.dialog.settings.label.maxTokens": "最大Token数",
   "model.dialog.modelList.tooltip.settings": "模型设置",
   "model.dialog.hint.multimodalEnabled": "多模态向量模型可处理图像和文本",
   "model.dialog.hint.multimodalDisabled": "文本向量模型仅处理文本",
-  "model.dialog.hint.batchImportEnabled": "批量添加模式已启用，可通过apiKey一次性导入多个模型",
+  "model.dialog.hint.batchImportEnabled": "批量添加模式已启用，可通过API Key一次性导入多个模型",
   "model.dialog.hint.batchImportDisabled": "批量添加模式已关闭，仅添加单个模型",
   "model.provider.silicon": "硅基流动",
   "model.dialog.modelList.title": "显示模型",
@@ -556,7 +557,7 @@
   "model.dialog.status.verifying": "正在验证模型连通性...",
   "model.dialog.error.addFailed": "添加模型失败：{{error}}",
   "model.dialog.error.addFailedLog": "添加模型失败",
-  "model.dialog.error.noModelsFetched": "请检查相关apikey以及网络连通性",
+  "model.dialog.error.noModelsFetched": "请检查相关API Key以及网络连通性",
   "model.dialog.message.noModels": "请先获取模型",
   "model.dialog.editTitle": "编辑模型",
   "model.dialog.editSuccess": "模型更新成功",
@@ -581,7 +582,7 @@
   "model.dialog.delete.noModels": "没有可删除的自定义模型",
   "model.dialog.delete.noModelsOfType": "没有可删除的{{type}}",
   "model.dialog.delete.warning": "删除模型操作不可恢复。如果删除当前正在使用的模型，相关配置将被重置。",
-  "model.dialog.edit.warning": "批量修改模型前，需要确认相关apiKey的正确性。如果修改当前正在使用的模型，相关配置将被重置。",
+  "model.dialog.edit.warning": "批量修改模型前，需要确认相关API Key的正确性。如果修改当前正在使用的模型，相关配置将被重置。",
   "model.message.deleteSuccess": "删除模型成功: {{name}}",
   "model.message.deleteFailed": "删除模型失败: {{name}}",
   "model.error.deleteError": "删除模型失败:",
