--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -530,8 +530,7 @@
   "model.dialog.placeholder.displayName": "请输入模型的展示名称",
   "model.dialog.placeholder.url": "请输入模型URL, 例如: https://api.openai.com/v1",
   "model.dialog.placeholder.url.embedding": "请输入模型URL, 例如: https://api.openai.com/v1/embeddings",
-  "model.dialog.placeholder.apiKey": "请输入API Key（可选）",
-  "model.dialog.placeholder.apiKeyRequired": "请输入API Key",
+  "model.dialog.placeholder.apiKey": "请输入API Key",
   "model.dialog.placeholder.maxTokens": "请输入最大Token数",
   "model.dialog.settings.title": "模型设置",
   "model.dialog.settings.label.maxTokens": "最大Token数",
