--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -938,5 +938,15 @@
   "businessLogic.config.error.loadModelsFailed": "Failed to load available models",
   "businessLogic.config.error.noAvailableModels": "No available models",
   "businessLogic.config.error.modelUpdateFailed": "Failed to update agent model",
-  "businessLogic.config.error.maxStepsUpdateFailed": "Failed to update agent max steps"
+  "businessLogic.config.error.maxStepsUpdateFailed": "Failed to update agent max steps",
+
+  "diagram.button.showDiagram": "Show Diagram",
+  "diagram.button.showCode": "Show Code",
+  "diagram.button.zoomOut": "Zoom Out",
+  "diagram.button.zoomIn": "Zoom In",
+  "diagram.button.download": "Download",
+  "diagram.format.svg": "SVG",
+  "diagram.format.png": "PNG",
+  "diagram.format.selectFormat": "Select Format",
+  "diagram.error.renderFailed": "Render Failed"
 }
