--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -938,5 +938,15 @@
   "businessLogic.config.error.loadModelsFailed": "加载可用模型失败",
   "businessLogic.config.error.noAvailableModels": "暂无可用的模型",
   "businessLogic.config.error.modelUpdateFailed": "更新Agent模型失败",
-  "businessLogic.config.error.maxStepsUpdateFailed": "更新Agent最大步数失败"
+  "businessLogic.config.error.maxStepsUpdateFailed": "更新Agent最大步数失败",
+
+  "diagram.button.showDiagram": "显示图表",
+  "diagram.button.showCode": "显示代码",
+  "diagram.button.zoomOut": "缩小",
+  "diagram.button.zoomIn": "放大",
+  "diagram.button.download": "下载",
+  "diagram.format.svg": "SVG",
+  "diagram.format.png": "PNG",
+  "diagram.format.selectFormat": "选择格式",
+  "diagram.error.renderFailed": "渲染失败"
 }
