--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -367,7 +367,8 @@
   "toolConfig.toolTest.execute": "执行测试",
   "toolConfig.toolTest.result": "测试结果",
   "toolConfig.button.testTool": "工具测试",
-
+  "toolConfig.toolTest.manualInput": "手动输入",
+  "toolConfig.toolTest.parseMode": "解析模式",
   "toolPool.title": "选择 Agent 的工具",
   "toolPool.loading": "加载中...",
   "toolPool.loadingTools": "加载工具中...",
