--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -940,6 +940,7 @@
   "businessLogic.config.error.noAvailableModels": "暂无可用的模型",
   "businessLogic.config.error.modelUpdateFailed": "更新Agent模型失败",
   "businessLogic.config.error.maxStepsUpdateFailed": "更新Agent最大步数失败",
+  "businessLogic.config.error.agentCreationFailed": "创建Agent失败",
 
   "diagram.button.showDiagram": "显示图表",
   "diagram.button.showCode": "显示代码",
