[Improvement] The suffixes of LLM and embedding models are not consistent during configuration #1402

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -551,8 +551,8 @@
   "model.dialog.button.verifying": "Verifying...",
   "model.dialog.button.add": "Add",
   "model.dialog.help.title": "Model Configuration Guide",
-  "model.dialog.help.content": "Please fill in the model's basic information. API Key and display name are optional, other fields are required. It's recommended to verify connectivity before adding the model.",
-  "model.dialog.help.content.batchImport": "Please fill in the provider's basic information. API Key and provider name are required, other fields are optional. It's recommended to verify connectivity before adding the model.",
+  "model.dialog.help.content": "Please fill in the model's basic information. API Key and display name are optional, other fields are required. It's recommended to verify connectivity before adding the model. For detailed configuration methods, please refer to [Model Configuration](https://modelengine-group.github.io/nexent/en/user-guide/model-configuration.html).",
+  "model.dialog.help.content.batchImport": "Please fill in the provider's basic information. API Key and provider name are required, other fields are optional. It's recommended to verify connectivity before adding the model. For detailed configuration methods, please refer to [Model Configuration](https://modelengine-group.github.io/nexent/en/user-guide/model-configuration.html).",
   "model.dialog.warning.incompleteForm": "Please complete the model configuration information first",
   "model.dialog.status.verifying": "Verifying model connectivity...",
   "model.dialog.success.connectivityVerified": "Model connectivity verification successful!",
