--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -552,8 +552,8 @@
   "model.dialog.button.verifying": "验证中...",
   "model.dialog.button.add": "添加",
   "model.dialog.help.title": "模型配置说明",
-  "model.dialog.help.content": "请填写模型的基本信息，API Key、展示名称为可选项，其他字段为必填项。建议先验证连通性后再添加模型。",
-  "model.dialog.help.content.batchImport": "请填写提供商的基本信息，API Key和提供商名称为必填项，其他字段为可选项。",
+  "model.dialog.help.content": "请填写模型的基本信息，API Key、展示名称为可选项，其他字段为必填项。建议先验证连通性后再添加模型。详细配置方法请参考[模型配置](https://modelengine-group.github.io/nexent/zh/user-guide/model-configuration.html)。",
+  "model.dialog.help.content.batchImport": "请填写提供商的基本信息，API Key和提供商名称为必填项，其他字段为可选项。详细配置方法请参考[模型配置](https://modelengine-group.github.io/nexent/zh/user-guide/model-configuration.html)。",
   "model.dialog.warning.incompleteForm": "请先填写完整的模型配置信息",
   "model.dialog.status.verifying": "正在验证模型连通性...",
   "model.dialog.error.addFailed": "添加模型失败：{{error}}",
