✨ Allow to edit unavailable agents #1312

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -332,8 +332,8 @@
   "subAgentPool.button.create": "Create Agent",
   "subAgentPool.button.import": "Import Agent",
   "subAgentPool.button.importing": "Importing...",
-  "subAgentPool.message.unavailable": "This Agent is unavailable",
   "subAgentPool.tooltip.unavailableAgent": "Agent is unavailable",
+  "subAgentPool.tooltip.hasUnavailableTools": "Contains unavailable tools",
   "subAgentPool.section.agentList": "Agent List",
   "subAgentPool.description.exitCreate": "Exit create mode",
   "subAgentPool.description.createAgent": "Create custom agent",
