--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -333,8 +333,8 @@
   "subAgentPool.button.create": "创建Agent",
   "subAgentPool.button.import": "导入Agent",
   "subAgentPool.button.importing": "导入中...",
-  "subAgentPool.message.unavailable": "该Agent不可用",
   "subAgentPool.tooltip.unavailableAgent": "Agent不可用",
+  "subAgentPool.tooltip.hasUnavailableTools": "包含不可用的工具",
   "subAgentPool.section.agentList": "智能体列表",
   "subAgentPool.description.exitCreate": "退出创建模式",
   "subAgentPool.description.createAgent": "创建自定义智能体",
