--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -556,6 +556,7 @@
   "model.dialog.warning.incompleteForm": "Please complete the model configuration information first",
   "model.dialog.status.verifying": "Verifying model connectivity...",
   "model.dialog.success.connectivityVerified": "Model connectivity verification successful!",
+  "model.dialog.error.connectivityRequired": "Please verify model connectivity and ensure connection is successful before adding the model",
   "model.dialog.error.addFailed": "Failed to add model: {{error}}",
   "model.dialog.error.addFailedLog": "Failed to add model",
   "model.dialog.error.noModelsFetched": "Please check your API key and network connectivity",
