--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -100,6 +100,9 @@
   "chatLeftSidebar.noHistory": "No conversation history",
   "chatLeftSidebar.expandSidebar": "Expand Sidebar",
   "chatLeftSidebar.settings": "Settings",
+  "chatLeftSidebar.settingsMenu.modelConfig": "Application and System Model Configuration",
+  "chatLeftSidebar.settingsMenu.knowledgeConfig": "Knowledge Base Configuration",
+  "chatLeftSidebar.settingsMenu.agentConfig": "Agent Configuration",
   "chatLeftSidebar.confirmDeletionTitle": "Delete Conversation",
   "chatLeftSidebar.confirmDeletionDescription": "Are you sure you want to delete this conversation? This action cannot be undone.",
   "chatLeftSidebar.cancel": "Cancel",
