--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -100,9 +100,9 @@
   "chatLeftSidebar.noHistory": "无历史对话",
   "chatLeftSidebar.expandSidebar": "展开边栏",
   "chatLeftSidebar.settings": "设置",
-  "chatLeftSidebar.settingsMenu.modelConfig": "应用程序和系统模型配置",
+  "chatLeftSidebar.settingsMenu.modelConfig": "应用与模型配置",
   "chatLeftSidebar.settingsMenu.knowledgeConfig": "知识库配置",
-  "chatLeftSidebar.settingsMenu.agentConfig": "代理配置",
+  "chatLeftSidebar.settingsMenu.agentConfig": "智能体配置",
   "chatLeftSidebar.confirmDeletionTitle": "删除对话",
   "chatLeftSidebar.confirmDeletionDescription": "确定要删除这个对话吗？此操作无法撤销。",
   "chatLeftSidebar.cancel": "取消",
