✨ Now user can adjust the chunking size when adding or editing the embedding model 🔨 Change the default chunking size from 1200-1500 to 1024-1536 🎨 Improve the coding style of data_process module in sdk

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -643,6 +643,9 @@
   "modelConfig.button.addCustomModel": "Add Custom Model",
   "modelConfig.button.editCustomModel": "Edit Custom Model",
   "modelConfig.button.checkConnectivity": "Check Model Connectivity",
+  "modelConfig.slider.chunkingSize": "Chunk Size",
+  "modelConfig.slider.expectedChunkSize": "Expected Chunk Size",
+  "modelConfig.slider.maximumChunkSize": "Maximum Chunk Size",
 
   "businessLogic.title": "Describe how should this agent work",
   "businessLogic.placeholder": "Please describe your business scenario and requirements...",
