--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -557,7 +557,14 @@
   "model.dialog.status.verifying": "Verifying model connectivity...",
   "model.dialog.success.connectivityVerified": "Model connectivity verification successful!",
   "model.dialog.error.connectivityRequired": "Please verify model connectivity and ensure connection is successful before adding the model",
+  "model.dialog.error.connectivityFailed": "Model connectivity verification failed: {{error}}",
   "model.dialog.error.addFailed": "Failed to add model: {{error}}",
+  "model.dialog.error.nameAlreadyInUse": "Name '{{name}}' is already in use, please choose another display name",
+  "model.dialog.error.modelNotFound": "Model not found: {{name}}",
+  "model.dialog.error.failedToConnect": "Failed to connect to model '{{modelName}}' at {{url}}. Please verify the URL, API key, and network connection.",
+  "model.dialog.error.failedToConnectGeneric": "Connection failed: {{error}}",
+  "model.dialog.error.unsupportedModelType": "Unsupported model type: {{type}}",
+  "model.dialog.error.invalidConfiguration": "Invalid configuration: {{error}}",
   "model.dialog.error.addFailedLog": "Failed to add model",
   "model.dialog.error.noModelsFetched": "Please check your API key and network connectivity",
   "model.dialog.message.noModels": "Please fetch models first",
@@ -565,8 +572,6 @@
   "model.dialog.editTitle": "Edit Model",
   "model.dialog.editSuccess": "Model updated successfully",
   "model.dialog.error.editFailed": "Failed to update model",
-  "model.dialog.error.nameConflict": "Name '{{name}}' is already in use, please choose another display name",
-  "model.dialog.error.modelNotFound": "Model not found",
   "model.dialog.error.serverError": "Server internal error, please try again later",
   "model.type.llm": "Large Language Model",
   "model.type.embedding": "Embedding Model",
