[Bug] The dialogue with the agent with the same name is successful #1404

--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -337,7 +337,7 @@
   "subAgentPool.button.import": "导入Agent",
   "subAgentPool.button.importing": "导入中...",
   "subAgentPool.tooltip.unavailableAgent": "Agent不可用",
-  "subAgentPool.tooltip.hasUnavailableTools": "包含不可用的工具",
+  "subAgentPool.tooltip.hasUnavailableTools": "该智能体因包含不可用的工具，请修改工具配置后使用",
   "subAgentPool.section.agentList": "智能体列表",
   "subAgentPool.description.exitCreate": "退出创建模式",
   "subAgentPool.description.createAgent": "创建自定义智能体",
@@ -347,6 +347,8 @@
   "subAgentPool.tooltip.exitCreateMode": "点击退出创建模式",
   "subAgentPool.tooltip.exitEditMode": "点击退出编辑模式",
   "subAgentPool.tooltip.editAgent": "点击编辑",
+  "subAgentPool.tooltip.duplicateNameDisabled": "该智能体因与其他智能体同名而被禁用，请修改名称后使用",
+  "subAgentPool.message.duplicateNameDisabled": "该智能体因与其他智能体同名而被禁用，请修改名称后使用",
 
   "toolConfig.title.paramConfig": "参数配置",
   "toolConfig.message.loadError": "加载工具配置失败",
