--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -475,6 +475,7 @@
   "knowledgeBase.empty.description": "请在左侧列表选择一个知识库，或创建新的知识库",
   "knowledgeBase.error.createUpload": "知识库创建或上传失败：",
   "knowledgeBase.error.getSummary": "获取知识库总结失败：",
+  "knowledgeBase.summary.notGenerated": "未生成知识库总结，请更换模型配置重试",
   "knowledgeBase.name.new": "新知识库",
   "knowledgeBase.message.getDocumentsFailed": "获取文档列表失败",
 
